# rdmapp

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  acceptor_8h_source.html  annotated.html  blocking__queue_8h_source.html  channel_8h_source.html  classes.html  classrdmapp_1_1acceptor-members.html  classrdmapp_1_1acceptor.html  classrdmapp_1_1acceptor__coll__graph.map  classrdmapp_1_1acceptor__coll__graph.md5  classrdmapp_1_1connector-members.html  classrdmapp_1_1connector.html  classrdmapp_1_1connector__coll__graph.md5  classrdmapp_1_1connector__inherit__graph.map  classrdmapp_1_1cq-members.html  classrdmapp_1_1cq.html  classrdmapp_1_1cq__coll__graph.map  classrdmapp_1_1cq__inherit__graph.md5  classrdmapp_1_1cq__poller-members.html  classrdmapp_1_1cq__poller.html  classrdmapp_1_1detail_1_1blocking__queue-members.html  classrdmapp_1_1detail_1_1blocking__queue.html  classrdmapp_1_1device-members.html  classrdmapp_1_1device.html  classrdmapp_1_1device__coll__graph.map  classrdmapp_1_1device__coll__graph.md5  classrdmapp_1_1device__list-members.html  classrdmapp_1_1device__list.html  classrdmapp_1_1device__list_1_1iterator-members.html  classrdmapp_1_1device__list_1_1iterator.html  classrdmapp_1_1device__list_1_1iterator__coll__graph.map  classrdmapp_1_1device__list_1_1iterator__coll__graph.md5  classrdmapp_1_1device__list__coll__graph.map  classrdmapp_1_1device__list__inherit__graph.md5  classrdmapp_1_1executor-members.html  (+167 more)
.github/workflows/: build.yml  pages.yml
examples/: acceptor.cc  connector.cc  helloworld.cc  qp_transmission.cc  send_bw.cc  write_bw.cc
examples/include/: acceptor.h  connector.h  qp_transmission.h
examples/include/socket/: channel.h  event_loop.h  tcp_connection.h  tcp_listener.h
examples/socket/: channel.cc  event_loop.cc  tcp_connection.cc  tcp_listener.cc
include/rdmapp/: acceptor.h  connector.h  cq.h  cq_poller.h  device.h  error.h  executor.h  mr.h  pd.h  qp.h  rdmapp.h  srq.h  task.h
include/rdmapp/detail/: blocking_queue.h  channel.h  debug.h  event_loop.h  io_buf.h  noncopyable.h  releaser.h  serdes.h  socket.h
include/rdmapp/socket/: channel.h  event_loop.h  tcp_connection.h  tcp_listener.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js
src/: acceptor.cc  connector.cc  cq.cc  cq_poller.cc  device.cc  executor.cc  mr.cc  pd.cc  qp.cc  srq.cc
src/detail/: event_loop.cc  io_buf.cc  socket.cc
src/socket/: channel.cc  event_loop.cc  tcp_connection.cc  tcp_listener.cc
